--- a/.github/actions/run_doxygen/action.yml
+++ b/.github/actions/run_doxygen/action.yml
@@ -24,7 +24,7 @@ runs:
   # documentation:
 
   - name: Doxygen Action for default
-    uses: source/.github/actions/doxygen-action
+    uses: ./source/.github/actions/doxygen-action
     with:
       # Working directory
       working-directory: "${{ inputs.package_root }}/doxygen"
@@ -34,7 +34,7 @@ runs:
       makefile-target: "all-html"
 
   - name: Doxygen Action for modules only
-    uses: source/.github/actions/doxygen-action
+    uses: ./source/.github/actions/doxygen-action
     with:
       # Working directory
       working-directory: "${{ inputs.package_root }}/doxygen"
@@ -44,7 +44,7 @@ runs:
       makefile-target: "module-docs-html"
 
   - name: Doxygen Action for public members of modules only
-    uses: source/.github/actions/doxygen-action
+    uses: ./source/.github/actions/doxygen-action
     with:
       # Working directory
       working-directory: "${{ inputs.package_root }}/doxygen"
@@ -58,7 +58,7 @@ runs:
       makefile-target: "module-docs-html"
 
   - name: Doxygen Action for framework
-    uses: source/.github/actions/doxygen-action
+    uses: ./source/.github/actions/doxygen-action
     with:
       # Working directory
       working-directory: "${{ inputs.package_root }}/doxygen"
