--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -36,7 +36,7 @@ jobs:
   build:
     name: Generate pkgdown and bookdown documentation
 
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
 
     steps:
 
@@ -59,13 +59,19 @@ jobs:
       if: inputs.bookdown-build || inputs.pkgdown-build
       uses: r-lib/actions/setup-r@v2
 
-    - name: 3. Install dependencies
-      if: inputs.bookdown-build || inputs.pkgdown-build
-      run: |
-        install.packages(c("remotes"))
-        setwd('source')
-        remotes::install_deps(dependencies = TRUE)
-      shell: Rscript {0}
+    - name: 3a. Install dependencies and pkgdown
+      if: inputs.pkgdown-build
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::pkgdown, local::.
+          needs: website
+          working-directory: source
+
+    - name: 3b. Install dependencies
+      if: inputs.bookdown-build && !inputs.pkgdown-build
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          working-directory: source
 
     - name: 4. Build Bookdown book
       if: inputs.bookdown-build
