--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -24,6 +24,8 @@ runs:
 
     - name: 9. Run bookdown
       run: |
+        pwd
+        ls -a
         cd ${{ inputs.repository-root }}/documentation/script
         ./run_bookdown.sh
       shell: bash
