--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -144,6 +144,7 @@ jobs:
         git push
 
     - name: (Tentative) Upload artifact containing documentation
+      if: ${{ always() }}
       uses: actions/upload-artifact@v2
       with:
         name: pkgdown-documentation
