--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -68,7 +68,7 @@ jobs:
 
     - name: 4. Build Bookdown book
       if: inputs.bookdown-build
-      uses: ./${{ env.BIOCRO_ROOT }}/.github/actions/render_bookdown_book
+      uses: ./source/.github/actions/render_bookdown_book
       with:
         repository-root: ${{ env.BIOCRO_ROOT }}
 
@@ -86,7 +86,7 @@ jobs:
 
     - name: 5. Build pkgdown book
       if: inputs.pkgdown-build
-      uses: ./${{ env.BIOCRO_ROOT }}/.github/actions/build_pkgdown_site
+      uses: ./source/.github/actions/build_pkgdown_site
       with:
         package_root: ${{ env.BIOCRO_ROOT }}
 
