--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -35,6 +35,7 @@ env:
   BIOCRO_DOCUMENTATION_ROOT: target
 
 jobs:
+  working-directory: ${{ env.BIOCRO_ROOT }}
   build:
     name: Generate pkgdown and bookdown documentation
 
@@ -46,8 +47,6 @@ jobs:
 
     - name: 1. Check out master
       uses: actions/checkout@v2
-      with:
-        path: ${{ env.BIOCRO_ROOT }}
 
     - name: 2. Set up R
       if: inputs.bookdown-build || inputs.pkgdown-build
@@ -58,20 +57,16 @@ jobs:
       uses: r-lib/actions/setup-r-dependencies@v2
       with:
         extra-packages: any::pkgdown, local::.
-        working-directory: ${{ env.BIOCRO_ROOT }}
 
     - name: 3b. Install dependencies
       if: inputs.bookdown-build && !inputs.pkgdown-build
       uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        working-directory: ${{ env.BIOCRO_ROOT }}
 
     - name: 4. Build Bookdown book
       if: inputs.bookdown-build
-      working-directory: ${{ env.BIOCRO_ROOT }}
       uses: './.github/actions/render_bookdown_book'
       with:
-        repository-root: .  # ${{ env.BIOCRO_ROOT }}
+        repository-root: .
 
     - name: (debug) Generate file list
       if: ${{ always() }}
@@ -89,13 +84,13 @@ jobs:
       if: inputs.pkgdown-build
       uses: ./source/.github/actions/build_pkgdown_site
       with:
-        package_root: ${{ env.BIOCRO_ROOT }}
+        package_root: .
 
     - name: 6. Build Doxygen documentation
       if: inputs.doxygen-build
       uses: ./source/.github/actions/run_doxygen
       with:
-        package_root: ${{ env.BIOCRO_ROOT }}
+        package_root: .
 
     # The "PUBLISH_TO" repository is where the documentation will be
     # copied to and then checked in (to the default branch).
@@ -106,7 +101,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ${{ env.PUBLISH_TO }}
-        path: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
+        path: ../${{ env.BIOCRO_DOCUMENTATION_ROOT }}
         ssh-key:  ${{ secrets.PRIVATE_SSH_KEY }}
 
     - name: 8. Copy files into working copy of the target repository
@@ -127,7 +122,7 @@ jobs:
         version_directories: "doxygen_docs_complete doxygen_docs_modules doxygen_docs_modules_public_members_only doxygen_docs_framework"
 
       run: |
-        cd $BIOCRO_DOCUMENTATION_ROOT
+        cd ../$BIOCRO_DOCUMENTATION_ROOT
 
         # (Re)create target documentation directory:
         mkdir -p $VERSION
@@ -148,7 +143,7 @@ jobs:
 
     - name: 9. Commit updates and push to target (documentation) repository
       run: |
-        cd $BIOCRO_DOCUMENTATION_ROOT
+        cd ../$BIOCRO_DOCUMENTATION_ROOT
 
         # user.name is somewhat arbitrary but must be provided:
         git config user.name biocro-action
