--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -43,7 +43,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: scripts
+        working-directory: ${{ env.BIOCRO_ROOT }}
 
     steps:
 
@@ -74,6 +74,7 @@ jobs:
 
     - name: (debug) Generate file list
       if: ${{ always() }}
+      continue-on-error: true
       run: |
         find . > file_list
 
