working-directory setting is only for run steps

--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -51,6 +51,8 @@ jobs:
 
     - name: 1. Check out master
       uses: actions/checkout@v2
+      with:
+        path: ${{ env.BIOCRO_ROOT }}
 
     - name: 2. Set up R
       if: inputs.bookdown-build || inputs.pkgdown-build
@@ -61,21 +63,28 @@ jobs:
       uses: r-lib/actions/setup-r-dependencies@v2
       with:
         extra-packages: any::pkgdown, local::.
+        working-directory: ${{ env.BIOCRO_ROOT }}
 
     - name: 3b. Install dependencies
       if: inputs.bookdown-build && !inputs.pkgdown-build
       uses: r-lib/actions/setup-r-dependencies@v2
+      with:
+        working-directory: ${{ env.BIOCRO_ROOT }}
 
     - name: 4. Build Bookdown book
       if: inputs.bookdown-build
       uses: './.github/actions/render_bookdown_book'
       with:
-        repository-root: .
+        repository-root: ${{ env.BIOCRO_ROOT }}
 
     - name: (debug) Generate file list
       if: ${{ always() }}
       continue-on-error: true
       run: |
+        pwd
+        echo ${{ env.GITHUB_WORKSPACE }}
+        ls -la
+        ls -la ${{ env.GITHUB_WORKSPACE }}
         find . > file_list
 
     - name: (debug) Upload artifact
@@ -89,13 +98,13 @@ jobs:
       if: inputs.pkgdown-build
       uses: ./source/.github/actions/build_pkgdown_site
       with:
-        package_root: .
+        package_root: ${{ env.BIOCRO_ROOT }}
 
     - name: 6. Build Doxygen documentation
       if: inputs.doxygen-build
       uses: ./source/.github/actions/run_doxygen
       with:
-        package_root: .
+        package_root: ${{ env.BIOCRO_ROOT }}
 
     # The "PUBLISH_TO" repository is where the documentation will be
     # copied to and then checked in (to the default branch).
@@ -106,7 +115,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ${{ env.PUBLISH_TO }}
-        path: ../${{ env.BIOCRO_DOCUMENTATION_ROOT }}
+        path: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
         ssh-key:  ${{ secrets.PRIVATE_SSH_KEY }}
 
     - name: 8. Copy files into working copy of the target repository
