--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -92,7 +92,7 @@ jobs:
 
     - name: 4. Build Bookdown book
       if: inputs.bookdown-build
-      uses: 'source/.github/actions/render_bookdown_book'
+      uses: './source/.github/actions/render_bookdown_book'
       with:
         repository-root: ${{ env.BIOCRO_ROOT }}
 
