--- a/.github/actions/run_doxygen/action.yml
+++ b/.github/actions/run_doxygen/action.yml
@@ -3,7 +3,7 @@ description: 'Generates four versions of the Doxygen documentation for BioCro pa
 inputs:
   package_root:
     description: 'The root directory of the source tree of an R package'
-    required: true
+    default: ${{ github.workspace }}
 
 runs:
   using: "composite"
