--- a/.github/actions/build_pkgdown_site/action.yml
+++ b/.github/actions/build_pkgdown_site/action.yml
@@ -2,8 +2,8 @@ name: 'Build pkgdown site'
 description: 'Builds a pkgdown site from the source files of the package at package_root'
 inputs:
   package_root:
-    description: 'The root directory of the source tree of an R package'
-    default: ${{ github.workspace }}
+    description: 'The root directory of the source tree of an R package relative to the GitHub workspace directory'
+    default: '.'
 runs:
   using: "composite"
   steps:
@@ -31,7 +31,7 @@ runs:
       shell: Rscript {0}
 
     - name: Run pkgdown
+      working-directory: ${{ inputs.package_root }}/documentation/script
       run: |
-        cd ${{ inputs.package_root }}/documentation/script
         ./run_pkgdown.sh
       shell: bash
