--- a/.github/actions/render_bookdown_book/action.yml
+++ b/.github/actions/render_bookdown_book/action.yml
@@ -1,9 +1,9 @@
 name: 'Render Bookdown Book'
 description: 'Builds the Bookdown developer documentation, installing any needed prerequisites'
 inputs:
-  repository-root:
-    description: 'The root of the repository containing the bookdown source files'
-    default: ${{ github.workspace }}
+  package_root:
+    description: 'The root directory of the source tree of an R package relative to the GitHub workspace directory'
+    default: '.'
 runs:
   using: "composite"
   steps:
@@ -23,9 +23,9 @@ runs:
       shell: Rscript {0}
 
     - name: 9. Run bookdown
+      working-directory: ${{ inputs.package_root }}/documentation/script
       run: |
         pwd
         ls -l
-        cd ${{ inputs.repository-root }}/documentation/script
         ./run_bookdown.sh
       shell: bash
