Tidy up everything.

--- a/.github/actions/build_pkgdown_site/action.yml
+++ b/.github/actions/build_pkgdown_site/action.yml
@@ -15,7 +15,7 @@ runs:
       continue-on-error: true
 
     - name: Install Pandoc
-      if: always() && steps.pandoc-test.outcome == 'failure'
+      if: steps.pandoc-test.outcome == 'failure'
       uses: r-lib/actions/setup-pandoc@v2
 
     - name: Install TinyTex
