--- a/.github/actions/run_doxygen/action.yml
+++ b/.github/actions/run_doxygen/action.yml
@@ -1,30 +1,35 @@
 name: Create All Doxygen Versions
 description: 'Generates four versions of the Doxygen documentation for BioCro package.'
-inputs:
-  package_root:
-    description: 'The root directory of the source tree of an R package relative to the GitHub workspace directory'
-    default: '.'
+
+env:
+
+  # This variable represents the path of the root directory of the
+  # source tree of an R package relative to the GitHub workspace
+  # directory.  Unlike in the case of the "render_bookdown_book" and
+  # "build_pkgdown_site" actions, this value is not an action input
+  # but rather has a fixed value.  This is because the
+  # "uses: ./.github/actions/doxygen-action" settings assume that the
+  # package root is identical to the GitHub workspace directory.  (The
+  # "uses" value can not, as of this writing, be set using a context
+  # expression such as
+  # "${{ inputs.package_root }}/.github/actions/doxygen-action".)
+
+  package_root: '.'
 
 runs:
   using: "composite"
+
   steps:
 
-  - name: debug
-    run: |
-      echo ${{ inputs.package_root }}
-      echo $GITHUB_WORKSPACE
-      ls -al
-    shell: bash
-
-  # The following four steps use the doxygen-actuib action defined in
-  # this repository to build four different versions of the Doxygen
+  # These four steps use the doxygen-action action defined in this
+  # repository to build four different versions of the Doxygen
   # documentation:
 
   - name: Doxygen Action for default
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ inputs.package_root }}/doxygen"
+      working-directory: "${{ env.package_root }}/doxygen"
       # Not generating the tree-view index makes source code browsing easier.
       generate-treeview: NO
       # Makefile target
@@ -34,7 +39,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ inputs.package_root }}/doxygen"
+      working-directory: "${{ env.package_root }}/doxygen"
       # Color
       color: 53
       # Makefile target
@@ -44,7 +49,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ inputs.package_root }}/doxygen"
+      working-directory: "${{ env.package_root }}/doxygen"
       # Color
       color: 323
       # Document private members
@@ -58,7 +63,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ inputs.package_root }}/doxygen"
+      working-directory: "${{ env.package_root }}/doxygen"
       # Color
       color: 233
       # Not generating the tree-view index makes source code browsing easier.
