--- a/.github/workflows/run_bookdown_and_pkgdown.yml
+++ b/.github/workflows/run_bookdown_and_pkgdown.yml
@@ -1,7 +1,4 @@
-# This workflow can only be run manually for now, as it uses macOS as
-# a runner, which is expensive.
-
-name: Generate pkgdown and bookdown documentation
+name: Generate documentation
 
 on:
   push:
@@ -11,6 +8,8 @@ on:
     tags:
       - '*'
 
+  # This event creates an artifact for download but does not write to
+  # the BioCro documentation repository:
   pull_request:
 
   workflow_dispatch:
@@ -29,15 +28,16 @@ on:
         default: true
 
 env:
+  # The documentation repository:
   PUBLISH_TO: "gsrohde/biocro-documentation"
-  VERSION: ${{ github.ref_name }}
   # Relative path from the GitHub workspace directory to the directory
   # where the documentation repository will be checked out:
   BIOCRO_DOCUMENTATION_ROOT: biocro_documentation_repository
+  VERSION: ${{ github.ref_name }}
 
 jobs:
   build:
-    name: Generate pkgdown and bookdown documentation
+    name: Build pkgdown, bookdown, and Doxygen documentation
 
     runs-on: ubuntu-latest
 
@@ -46,27 +46,8 @@ jobs:
     - name: 1. Check out repository
       uses: actions/checkout@v2
 
-    - name: (debug) Generate file list
-      if: ${{ always() }}
-      continue-on-error: true
-      run: |
-        pwd
-        echo ${{ github.workspace }}
-        echo $GITHUB_WORKSPACE
-        ls -la
-        ls -la ${{ github.workspace }}
-        ls -la $GITHUB_WORKSPACE
-        find . > file_list
-
-    - name: (debug) Upload artifact
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: File_list
-        path: file_list
-
     - name: 2. Set up R
-      if: failure() || inputs.bookdown-build || inputs.pkgdown-build
+      if: inputs.bookdown-build || inputs.pkgdown-build
       uses: r-lib/actions/setup-r@v2
 
     - name: 3a. Install dependencies and pkgdown
@@ -92,31 +73,36 @@ jobs:
       uses: ./.github/actions/run_doxygen
 
     # The "PUBLISH_TO" repository is where the documentation will be
-    # copied to and then checked in (to the default branch).
-    # Providing ssh-key to this checkout action gives us permission to
-    # check in our changes later, in the Push step:
+    # pushed to (on the default branch).  Providing ssh-key to this
+    # checkout action gives us permission to check in our changes
+    # later, in the Push step:
 
     - name: 7. Check out the target "PUBLISH_TO" repository
+      if: github.event_name != 'pull_request'
       uses: actions/checkout@v2
       with:
         repository: ${{ env.PUBLISH_TO }}
         path: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
         ssh-key:  ${{ secrets.PRIVATE_SSH_KEY }}
 
-    - name: 8. Copy files into working copy of the target repository
+    - name: 8. "Copy newly-generated documentation files into working
+                copy of the target repository"
+
+      if: github.event_name != 'pull_request'
 
       env:
 
-        # The version directory names are hard-coded into the Make
-        # file and are determined by the Make target.  An exception to
-        # this is "doxygen_docs_modules_public_members_only", which is
-        # explicitly set as an output directory in the
-        # build_pkgdown_site action, overriding the default output
-        # directory for the Make file target "module-docs-html".  (The
-        # default output directory "doxygen_docs_modules" was already
-        # used as the output directory for a version of the module
-        # documentation that included documentation of private
-        # members, and we don't want to overwrite it.)
+        # The Doxygen version directory names are hard-coded into the
+        # Make file and are determined by the Make target.  An
+        # exception to this is
+        # "doxygen_docs_modules_public_members_only", which is
+        # explicitly set as an output directory in the run_doxygen
+        # action, overriding the default output directory for the Make
+        # file target "module-docs-html".  (The default output
+        # directory "doxygen_docs_modules" was already used as the
+        # output directory for a version of the module documentation
+        # that included documentation of private members, and we don't
+        # want to overwrite it.)
 
         version_directories: "doxygen_docs_complete doxygen_docs_modules doxygen_docs_modules_public_members_only doxygen_docs_framework"
 
@@ -128,30 +114,23 @@ jobs:
 
         # Copy the respective documentation into them:
 
-        if [[ ${{ inputs.pkgdown-build }} == 'true' ]]
+        if [[ ${{ inputs.pkgdown-build }} == true ]]
         then
-            echo "copying pkgdown files"
-            pwd
-            ls -la ..
-            ls -la ../docs
+            echo "Copying pkgdown files"
             rsync -a --delete --filter "protect /bookdown_book" \
                               --filter "protect /doxygen" \
                   -v -v ../docs/ $VERSION || true
         fi
 
-        if [[ ${{ inputs.bookdown-build }} == 'true' ]]
+        if [[ ${{ inputs.bookdown-build }} == true ]]
         then
             echo "copying bookdown files"
-            pwd
-            ls -la ..
             rsync -a --delete ../bookdown/_book/ $VERSION/bookdown_book || true
         fi
 
-        if [[ ${{ inputs.doxygen-build }} == 'true' ]]
+        if [[ ${{ inputs.doxygen-build }} == true ]]
         then
             echo "copying doxygen files"
-            pwd
-            ls -la ..
             mkdir -p $VERSION/doxygen
             for dir in ${{ env.version_directories }}; do
 
@@ -163,6 +142,8 @@ jobs:
 
     - name: 9. Commit updates and push to target (documentation) repository
 
+      if: github.event_name != 'pull_request'
+
       working-directory: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
       run: |
 
@@ -172,12 +153,12 @@ jobs:
         git commit -m "generated pgkdown and bookdown documentation"
         git push
 
-    - name: Zip documentation
+    - name: 10. Zip documentation
       run: |
         tar -czf biocro-docs-from-$VERSION.tgz -C $BIOCRO_DOCUMENTATION_ROOT/$VERSION .
 
-    - name: (Tentative) Upload artifact containing documentation
+    - name: 11. Upload artifact containing documentation
       uses: actions/upload-artifact@v2
       with:
-        name: pkgdown-documentation
+        name: biocro-documentation
         path: biocro-docs-from-${{ env.VERSION }}.tgz
