--- a/.github/actions/run_doxygen/action.yml
+++ b/.github/actions/run_doxygen/action.yml
@@ -1,32 +1,40 @@
 name: Create All Doxygen Versions
 description: 'Generates four versions of the Doxygen documentation for BioCro package.'
+inputs:
+  package_root:
+    description: 'The root directory of the source tree of an R package relative to the GitHub workspace directory'
+    default: '.'
 
 runs:
   using: "composite"
 
-
-  env:
-
-    # This variable represents the path of the root directory of the
-    # source tree of an R package relative to the GitHub workspace
-    # directory.  Unlike in the case of the "render_bookdown_book" and
-    # "build_pkgdown_site" actions, this value is not an action input
-    # but rather has a fixed value.  This is because the
-    # "uses: ./.github/actions/doxygen-action" settings assume that the
-    # package root is identical to the GitHub workspace directory.  (The
-    # "uses" value can not, as of this writing, be set using a context
-    # expression such as
-    # "${{ inputs.package_root }}/.github/actions/doxygen-action".)
-
-    package_root: '.'
-
   steps:
+
+  - name: Maybe abort
+    run: |
+      if [[ ${{ inputs.package_root }} != "." ]]
+      then
+        echo "package_root must be set to '.'"
+        exit
+      fi
+
+      # Note: The "package_root" input represents the path of the root
+      # directory of the source tree of the BioCro package relative to
+      # the GitHub workspace directory.  Unlike in the case of the
+      # "render_bookdown_book" and "build_pkgdown_site" actions, this
+      # value is not an action input but rather has a fixed value.
+      # This is because the
+      # "uses: ./.github/actions/doxygen-action" settings assume that the
+      # package root is identical to the GitHub workspace directory.  (The
+      # "uses" value can not, as of this writing, be set using a context
+      # expression such as
+      # "${{ inputs.package_root }}/.github/actions/doxygen-action".)
+
 
   - name: debug
     run: |
-      echo ${{ env.package_root }}
-      echo "${{ env.package_root }}/doxygen"
-      echo $GITHUB_WORKSPACE
+      echo ${{ inputs.package_root }}
+      echo ${{ github.workspace }}
       ls -al
     shell: bash
 
@@ -38,7 +46,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ env.package_root }}/doxygen"
+      working-directory: "${{ inputs.package_root }}/doxygen"
       # Not generating the tree-view index makes source code browsing easier.
       generate-treeview: NO
       # Makefile target
@@ -48,7 +56,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ env.package_root }}/doxygen"
+      working-directory: "${{ inputs.package_root }}/doxygen"
       # Color
       color: 53
       # Makefile target
@@ -58,7 +66,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ env.package_root }}/doxygen"
+      working-directory: "${{ inputs.package_root }}/doxygen"
       # Color
       color: 323
       # Document private members
@@ -72,7 +80,7 @@ runs:
     uses: ./.github/actions/doxygen-action
     with:
       # Working directory
-      working-directory: "${{ env.package_root }}/doxygen"
+      working-directory: "${{ inputs.package_root }}/doxygen"
       # Color
       color: 233
       # Not generating the tree-view index makes source code browsing easier.
