--- a/.github/actions/run_doxygen/action.yml
+++ b/.github/actions/run_doxygen/action.yml
@@ -16,7 +16,7 @@ runs:
       if [[ ${{ inputs.package_root }} != "." ]]
       then
         echo "package_root must be set to '.'"
-        exit
+        exit 1
       fi
 
       # Note: The "package_root" input represents the path of the root
